update filter menu selects

--- a/lk-spisok-sdelok.html
+++ b/lk-spisok-sdelok.html
@@ -311,7 +311,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <button class="lk-btn lk-btn_mobile_fixed add-menu__submit">Показать 21</button>
+                                    <button class="lk-btn add-menu__submit">Показать 21</button>
                                 </div>
                             </div>
                             <div class="deals-list__items lk-tabs__item lk-tabs__item_active">
