--- a/lk-vladelec-biznesa.html
+++ b/lk-vladelec-biznesa.html
@@ -175,11 +175,29 @@
                                 </div>
                                 <div class="filter-menu table__filters">
                                     <div class="filter-menu__left">
-                                        <button class="filter-btn filter-menu__btn table__filter-btn">По компаниям</button>
-                                        <button class="filter-btn filter-menu__btn table__filter-btn">По типу сделки</button>
+                                        <div class="select select_medium filter-menu__select">
+                                            <select class="select__field">
+                                                <option value="last-year" class="select__option">По компаниям</option>
+                                                <option value="last-year" class="select__option">По компаниям</option>
+                                                <option value="last-year" class="select__option">По компаниям</option>
+                                            </select>
+                                        </div>
+                                        <div class="select select_medium filter-menu__select">
+                                            <select class="select__field">
+                                                <option value="last-year" class="select__option">По типу сделки</option>
+                                                <option value="last-year" class="select__option">По типу сделки</option>
+                                                <option value="last-year" class="select__option">По типу сделки</option>
+                                            </select>
+                                        </div>
                                         <input type="number" class="filter-field filter-menu__field table__filter-field" placeholder="Сумма от">
                                         <input type="number" class="filter-field filter-menu__field table__filter-field" placeholder="Сумма до">
-                                        <button class="filter-btn filter-menu__btn table__filter-btn">По дате</button>
+                                        <div class="select select_medium filter-menu__select">
+                                            <select class="select__field">
+                                                <option value="last-year" class="select__option">По дате</option>
+                                                <option value="last-year" class="select__option">По дате</option>
+                                                <option value="last-year" class="select__option">По дате</option>
+                                            </select>
+                                        </div>
                                     </div>
                                     <div class="filter-menu__right">
                                         <div class="filter filter-menu__item">
@@ -239,7 +257,7 @@
                                         <button class="filter-btn filter-btn_export filter-menu__btn table__filter-btn">Экспортировать</button>
                                     </div>
                                 </div>
-                                <button class="lk-btn lk-btn_mobile_fixed add-menu__submit">Показать 21</button>
+                                <button class="lk-btn add-menu__submit">Показать 21</button>
                             </div>
                             <div class="table__wrapper">
                                 <table class="table__main">
