--- a/lk-notification.html
+++ b/lk-notification.html
@@ -267,7 +267,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <button class="lk-btn lk-btn_mobile_fixed add-menu__submit">Показать 21</button>
+                                        <button class="lk-btn add-menu__submit">Показать 21</button>
                                     </div>
                                 </div>
                                 <div class="col-xl-8 order-xl-1">
